--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">DuckApp</string>
+    <string name="send">SEND</string>
+    <string name="cute_duck">cute duck</string>
+    <string name="input_hint">Enter http code to get duck!</string>
 </resources>
